# surapp_pwise

./: .dockerignore  .gitignore  Dockerfile  README.md  build.py  build_linux.spec  build_macos.spec  build_windows.spec  clean_km_data.py  create_compact_km.py  docker-compose.yml  docker-run.bat  docker-run.sh  extract_km.py  extract_km_curves.py  pyproject.toml  requirements.ai.txt  requirements.txt  step1_preview_image.py  step2_calibrate_axes.py  step3_extract_curves.py
docker/: Dockerfile  Dockerfile.ai  docker-compose.ai.yml  docker-compose.yml  run-ai.bat  run-ai.sh  run.bat  run.sh
docs/: surapp_ai.md  surapp_code.md  surapp_docker.md  surapp_learn.md  surapp_plan.md
km_extractor/: __init__.py  cli.py  extractor.py
lib/: __init__.py  ai_axis_detector.py  ai_config.py  ai_curve_extractor.py  ai_service.py  ai_table_reader.py  ai_text_remover.py  ai_validator.py  at_risk_extractor.py  calibrator.py  calibrator_v2.py  color_detector.py  color_transform.py  curve_quality_control.py  detector.py  hybrid_extractor.py  text_remover.py  validator.py
old/: debug_cyan_detection.py  debug_legend_leak.py  debug_ocr_full.py  debug_t12_accuracy.py  debug_t15_issue.py  debug_text_detection.py  debug_text_ocr.py  extract_km_skeleton.py  image_preprocessor.py  quick_extract.py  test_ai_extraction.py  test_fixed_extraction.py  test_full_extract.py  test_skeleton_extraction.py
src/: __init__.py  at_risk_tool.py  document_extraction_ai.py  document_extraction_steps.py  extract_km.py  extract_km_ai.py  extract_km_hybrid.py  extract_km_interactive.py  extract_km_with_ai.py  main.py  step1_preview_image.py  step2_calibrate_axes.py  step3_extract_curves.py  surapp.bat  surapp.sh
(+18 files in other folders)
