[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "km-extractor"
version = "1.0.0"
description = "Extract survival data from Kaplan-Meier curve images"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dan Ribes"}
]
keywords = ["kaplan-meier", "survival-analysis", "curve-extraction", "medical-imaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
    "matplotlib>=3.7.0",
]
pdf = [
    "PyMuPDF>=1.23.0",
]
full = [
    "customtkinter>=5.2.0",
    "matplotlib>=3.7.0",
    "PyMuPDF>=1.23.0",
    "openpyxl>=3.1.0",
]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
km-extract = "km_extractor.cli:main"

[project.urls]
Homepage = "https://github.com/danribes/surapp_pwise"
Repository = "https://github.com/danribes/surapp_pwise"

[tool.setuptools.packages.find]
where = ["."]
include = ["km_extractor*"]
